# markov

./: Cargo.toml  README.md  input1.txt
src/: lib.rs  main.rs  markov.rs
