[package]
name = "markov"
version = "0.1.0"
authors = [ "Kevin Pors <krpors@gmail.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
